syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package com.architectural.trends.grpc.customer;

option java_package = "com.architectural.trends.grpc.customer";
option java_multiple_files = true;

service CustomerService {
  rpc getCustomerDetails(CustomerRequest) returns (CustomerResponse);
  rpc getCustomerOrders(google.protobuf.StringValue) returns (Empty);
}
message CustomerRequest {
  string name = 1;
}
message CustomerResponse {
  int32 id = 1;
  string name = 3;
  int32 age = 4;
  Gender gender = 5;
  double orders_amount = 6;
}

message Empty {}

enum Gender {
  MALE = 0;
  FEMALE = 1;
}
